<resources>
    <string name="app_name">Memenator</string>
    <string name="app_year">2016</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>

    <string name="dialog_choosen_title">Choose Image From</string>
    <string name="dialog_choosen_gallery">Gallery</string>
    <string name="dialog_choosen_camera">Camera</string>

    <string name="input_text_top">Input Top Text</string>
    <string name="input_text_bottom">Input Bottom Text</string>
    <string name="input_text_size">Text Size : </string>
</resources>
