<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/dialog_choosen_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:drawableLeft="@android:drawable/ic_menu_gallery"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:text="@string/dialog_choosen_gallery" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="3dp"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:text="@string/dialog_choosen_camera" />
</LinearLayout>